Closed Bug 1262774 Opened 9 years ago Closed 9 years ago

broken support for mark filter sets in OpenType lookups

Categories

(Core :: Graphics: Text, defect)

47 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox46 --- unaffected
firefox47 --- fixed
firefox48 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

Details

(Keywords: regression)

Attachments

(1 file)

See discussion beginning at https://lists.freedesktop.org/archives/harfbuzz/2016-April/005533.html. This was broken in harfbuzz 1.2.2, which we took in bug 1249861, and can disrupt the rendering of fonts with complex mark handling -- e.g. some Arabic-script fonts. The fix is trivial, so we should cherry-pick it and uplift to FF47 so as to avoid shipping a release with the bug present.
Keywords: regression
We'll take a new harfbuzz version in bug 1251203 shortly, but as this is a regression with a trivial fix, I think we should cherry-pick it and uplift to FF47 rather than waiting for the new version to ride the train.
Attachment #8738943 - Flags: review?(jmuizelaar)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
I tested (manually) that we currently have bad rendering of the Hussaini Nastaleeq font in Nightly, and this patch fixes it. I don't think we can readily add a reftest here (not without considerable effort to create a custom font, etc), but upstream now has a unit test so it shouldn't get regressed again.
Attachment #8738943 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/556ead25fa217327f8d116b4390db1f459704636 Bug 1262774 - Cherry-pick upstream fix for broken mark filter set support in harfbuzz. r=jrmuizel
Comment on attachment 8738943 [details] [diff] [review] Cherry-pick upstream fix for broken mark filter set support in harfbuzz Approval Request Comment [Feature/regressing bug #]: 1249861 (upstream regression, now fixed) [User impact if declined]: some complex OpenType fonts will render incorrectly (some mark-handling lookups will fail) [Describe test coverage new/current, TreeHerder]: upstream now has unit test covering this; patch tested manually with an affected Arabic font [Risks and why]: minimal: trivial one-line fix for an obvious mistake [String/UUID change made/needed]: none
Attachment #8738943 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Comment on attachment 8738943 [details] [diff] [review] Cherry-pick upstream fix for broken mark filter set support in harfbuzz Low risk, was manually tested, Aurora47+
Attachment #8738943 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Version: unspecified → 47 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: