Bug 1262774 - Cherry-pick upstream fix for broken mark filter set support in harfbuzz. r=jrmuizel